# dogs

./: .env  .env.example  .gitignore  README.md  analysis_script.py  pyproject.toml
MATLAB m-files/: Converter.m  Converter2.m  Functionsforbinary.bas  brighton.m  brighton.mat  catford.m  catford.mat  dogMain.m  doggui.m  doggui.mat  dtransf.m  dtransf2.m  fixedWeightNodes.m  newAlpha.m  permGen.m  perry.m  perry.mat  randJumbler.m  swindon.m  swindon.mat  tester.m  transf.m  transf2.m
apps/: training_dashboard.py
artifacts/models/: .gitkeep  train-20260413201133-22c1b8d1.pt  train-20260413220910-940a90ef.pt  train-20260414103209-6649cbc4.pt  train-20260414160115-954dadcd.pt  train-20260415055956-e7034dc2.pt  train-20260415071113-aff97484-recovery.pt  train-20260415071113-aff97484.pt  train-20260415074921-0713e957-recovery.pt  train-20260415074921-0713e957.pt  train-20260415082145-6070bbdd-recovery.pt  train-20260415082145-6070bbdd.pt  train-20260415154419-89bcf115-recovery.pt  train-20260415154419-89bcf115.pt  train-20260415205234-0c1982f4-recovery.pt  train-20260415205841-9cf024bb-recovery.pt  train-20260415205841-9cf024bb.pt  train-20260416065815-fa43c510-recovery.pt  train-20260416065815-fa43c510.pt  train-20260416202857-c0dbf709-recovery.pt  train-20260416220235-d00fca6c-recovery.pt  train-20260417061736-66644671-recovery.pt  train-20260417082633-c7416f44-recovery.pt  train-20260417204128-4f707a9a-recovery.pt  train-20260419091321-f14f1d54-recovery.pt  train-20260419185328-be3b17e3-recovery.pt  train-20260419185328-be3b17e3.pt  (+30 more)
supabase/: schema.sql
(+30 files in other folders)
